--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
-    "name": "Brackets",
-    "version": "1.3.0-0",
-    "apiVersion": "1.3.0",
-    "homepage": "http://brackets.io",
-    "issues": {
-        "url": "http://github.com/adobe/brackets/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/adobe/brackets.git",
-        "branch": "",
-        "SHA": ""
-    },
-    "devDependencies": {
-        "grunt": "0.4.1",
-        "jasmine-node": "1.11.0",
-        "grunt-jasmine-node": "0.1.0",
-        "grunt-cli": "0.1.9",
-        "phantomjs": "1.9.13",
-        "grunt-lib-phantomjs": "0.3.0",
-        "grunt-contrib-jshint": "0.6.0",
-        "grunt-contrib-watch": "0.4.3",
-        "grunt-contrib-jasmine": "0.4.2",
-        "grunt-template-jasmine-requirejs": "0.1.0",
-        "grunt-contrib-cssmin": "0.6.0",
-        "grunt-contrib-clean": "0.4.1",
-        "grunt-contrib-copy": "0.4.1",
-        "grunt-contrib-htmlmin": "0.1.3",
-        "grunt-contrib-less": "0.8.2",
-        "grunt-contrib-requirejs": "0.4.1",
-        "grunt-contrib-uglify": "0.2.0",
-        "grunt-contrib-concat": "0.3.0",
-        "grunt-targethtml": "0.2.6",
-        "grunt-usemin": "0.1.11",
-        "load-grunt-tasks": "0.2.0",
-        "q": "0.9.2",
-        "semver": "^4.1.0",
-        "jshint": "2.1.4",
-        "xmldoc": "^0.1.2"
-    },
-    "scripts": {
-        "postinstall": "grunt install",
-        "test": "grunt cla-check-pull test"
-    },
-    "licenses": [
-        {
-            "type": "MIT",
-            "url": "https://github.com/adobe/brackets/blob/master/LICENSE"
-        }
-    ]
+  "name": "Brackets",
+  "version": "1.3.0-0",
+  "apiVersion": "1.3.0",
+  "homepage": "http://brackets.io",
+  "issues": {
+    "url": "http://github.com/adobe/brackets/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adobe/brackets.git",
+    "branch": "",
+    "SHA": ""
+  },
+  "devDependencies": {
+    "grunt": "0.4.1",
+    "grunt-cli": "0.1.9",
+    "grunt-contrib-clean": "0.4.1",
+    "grunt-contrib-concat": "0.3.0",
+    "grunt-contrib-copy": "0.4.1",
+    "grunt-contrib-cssmin": "0.6.0",
+    "grunt-contrib-htmlmin": "0.1.3",
+    "grunt-contrib-jasmine": "0.4.2",
+    "grunt-contrib-jshint": "0.6.0",
+    "grunt-contrib-less": "0.8.2",
+    "grunt-contrib-requirejs": "0.4.1",
+    "grunt-contrib-uglify": "0.2.0",
+    "grunt-contrib-watch": "0.4.3",
+    "grunt-git": "^0.3.4",
+    "grunt-jasmine-node": "0.1.0",
+    "grunt-lib-phantomjs": "0.3.0",
+    "grunt-npm": "git://github.com/sedge/grunt-npm.git#branchcheck",
+    "grunt-shell": "^1.1.2",
+    "grunt-targethtml": "0.2.6",
+    "grunt-template-jasmine-requirejs": "0.1.0",
+    "grunt-update-submodules": "^0.4.1",
+    "grunt-usemin": "0.1.11",
+    "habitat": "^3.1.2",
+    "jasmine-node": "1.11.0",
+    "jshint": "2.1.4",
+    "load-grunt-tasks": "0.2.0",
+    "phantomjs": "1.9.13",
+    "q": "0.9.2",
+    "semver": "^4.1.0",
+    "xmldoc": "^0.1.2"
+  },
+  "scripts": {
+    "postinstall": "grunt install",
+    "test": "grunt cla-check-pull test"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/adobe/brackets/blob/master/LICENSE"
+    }
+  ]
 }
